	dev0.1.9 R/原生添加 errorbar  [2020.9.17]
	dev0.2.0 合并到master  [2020.9.23]
# merge to master
	dev0.2.1 fix R脚本; 添加 mRNA 标准化函数;  [2020.10.10]
	dev0.2.2 add IF 2019; add Python/EyeDefender.py [2020.10.14]
	dev0.2.3 添加QQ群号提醒 [2020.11.8]
	dev0.2.4 添加R/counts2TPM function [2020.12.3]
	dev0.2.5 fix [2020.12.13]
	dev0.2.6 加入R双向条形图 [2020.12.15]
# merge to master [2020.12.15]
	dev0.2.7 去掉个人信息 [2020.12.27]
	dev0.2.8 顶部显眼位置添加QQ群 [2021.1.4]
# merge to master [2021.1.15]
	dev0.2.9 制作齿轮四色logo, 添加cumulative曲线 [2021.1.27]
	dev0.3.0 add density plot, 双色，加注释 [2021.3.5]
# merge to master [2021.3.5]
	dev0.3.1 JavaScript/mathJax_demo.html [2021.5.31]
	dev0.3.2 Python/snakemake/ 添加2个流程 [2021.6.16]
	dev0.3.3 Python/snakemake/; web run py [2021.6.17]
	dev0.3.4 R/ index_pkgs.html  [2021.7.3]
	dev0.3.5 IF/ 2020 [2021.7.3]
	dev0.3.6 IF/ 2019 [2021.7.4]
	dev0.3.7 shell/addUser.sh [2021.8.4]
	dev0.3.8 数学公式添加字体; dot_lint_plot.pdf [2021.11.3]
	dev0.3.9 fix; dplyr_ggplot综合例子gz包; 连续型变量到渐变色的映射 [2021.11.19]
	dev0.4.0 fix: add utf8 to html[2021.12.10]
# merge to master [2021.12.10]
	dev0.4.1 R包合并、修改 ggplot2 对象[2022.01.17]
	dev0.4.2 添加 grid 修改 ggplot2 图例：圆角矩形 [2022.01.18]
	dev0.4.3 js 版 Markdown Reader [2022.05.19]
	dev0.4.4 js/ Markdown Reader, update desc [2022.05.20]
# merge to master [2022.5.20]
	dev0.4.5 js/ IGV.js 单独开 repo 学习: scIGV [2022.05.30]
# merge to master: after Louvain [2022.6.1]
	dev0.4.6 Python/ Louvain 算法; 分辨率怎么体现? [2022.6.1]
	dev0.4.7 Python/ Louvain_5.py 更新注释
	dev0.4.8 R/ add fig sc火山图, GO雷达图 [2022.9.24]
		js/ code_reader.html
		py/ Louvain
	dev0.4.9 R/ update 雷达图, 发公众号 [2022.11.9]
	dev0.5.0 js/ code reader add to index.html [2022.11.18]
	dev0.5.1 add to index.html: js/ markdown reader [2022.11.18]
# merge to master: after update /index.html [2022.11.18]
	dev0.5.2 add js/ aminoAcid_Formater [2022.12.16]
	dev0.5.3 update js/ aminoAcid_Formater [2022.12.16]
	dev0.5.4 update js/ aminoAcid_Formater, add UTF8 [2023.2.4]
##==> commit
##=====> git push DawnEve



#












#








