@@ -105,7 +105,8 @@ v0.1.3 添加本地url
 # merge to master: after update /index.html [2022.11.18]
 	dev0.5.2 add js/ aminoAcid_Formater [2022.12.16]
 	dev0.5.3 update js/ aminoAcid_Formater [2022.12.16]
-	dev0.5.4 update js/ aminoAcid_Formater, add UTF8 [2023.2.4]
+	dev0.5.4 update js/ aminoAcid_Formater, add UTF8 [2023.1.4]
+	dev0.5.5 add js/ ddl_timer [2023.1.26]
 ##==> commit
 ##=====> git push DawnEve
 
